<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Social</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum est gravida nulla fermentum, fringilla suscipit mauris faucibus. Aliquam lacinia ex at purus lobortis hendrerit.</string>
    <string name="item_title">%s posted %s</string>
    <string name="SocialText">Social Application</string>
    <string name="text_socialize">Socialize !</string>
    <string name="textUsername">Username</string>
    <string name="textSignUp">Sign Up</string>
    <string name="textForgotPassword">Forgot Password?</string>
    <string name="textLogin">Login</string>
    <string name="textPassword">Password</string>
    <string name="textEmail">Email</string>
    <string name="textLoginWithFacebook">Login With Facebook</string>
    <string name="textLoginWithGoogle">Login With Google</string>
    <string name="textAlreadyAMember">Already a member ? Sign in.</string>
    <string name="facebook_application_id" translatable="false">693027334838162</string>
    <string name="facebook_login_protocol_scheme" translatable="false">b5929bbf404069394314f28679a70ab3</string>
    <string name="textLogOut">Log Out</string>
    <string name="textResetPassword">Reset Password</string>
    <string name="textGoBack">Go Back</string>
    <string name="textRememberMe">Remember Me</string>
    <string name="textAuthor">Author</string>
    <string name="textTempTimezone">01 January 2001</string>
    <string name="textSource">Source</string>
    <string name="textSubtitle">Subtitle</string>
    <string name="textPlan">text/plan</string>
    <string name="textShareWith">Share with :</string>
    <string name="textShare">Share</string>
    <string name="textOpenWithBrowser">Open with browser</string>
    <string name="textImage">image</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="textMessage">Message..</string>
    <string name="description">Let\'s socialize !</string>
    <string name="textSearch">Search</string>
    <string name="last_seen_at">"Last seen at : "</string>
    <string name="text_change_profile_picture">Change Profile Picture</string>
    <string name="text_view_profile_picture">View Profile Picture</string>
    <string name="text_edit_description">Edit Description</string>
    <string name="text_remove_profile_picture">Remove Profile Picture</string>
    <string name="text_your_next_description">Your Description ?</string>
    <string name="text_ok">OK</string>
    <string name="text_Typing" tools:ignore="TypographyEllipsis">typing...</string>
    <string name="textDelivered">Delivered</string>
    <string name="textSeen">Seen</string>
    <string name="save_content">Save Content</string>
    <string name="delete_content">Delete Content</string>
    <string name="saved_articles">Saved Articles</string>
</resources>
