<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout tools:context=".view.LoginActivity"
    android:id="@+id/loginRootView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:contentDescription="@null"
        android:src="@drawable/temp_logo"
        android:id="@+id/socialLogoImageView"
        android:layout_centerInParent="true"
        android:layout_width="60dp"
        android:layout_height="60dp"/>
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/app_name"
        android:id="@+id/textViewSocialLogin"
        android:layout_width="wrap_content"
        android:layout_below="@id/socialLogoImageView"
        android:layout_height="wrap_content"/>
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/afterAnimationProgress"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:theme="?android:attr/progressBarStyle" />
    <RelativeLayout
        android:id="@+id/animationEndView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SocialText"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtSocializeLogin"
            android:text="@string/text_socialize"
            android:layout_width="match_parent"
            android:layout_below="@id/loginTextView"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_above="@id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/txtSocializeLogin"
            android:gravity="center"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameEditText"
                android:hint="@string/textUsername"
                android:textSize="15sp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEditText"
                android:layout_marginTop="25dp"
                android:hint="@string/textPassword"
                android:textSize="15sp"/>
            <FrameLayout
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/textSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/textForgotPassword"
                    android:layout_gravity="end|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
        </LinearLayout>
        <Button
            android:textColor="@color/white"
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="5dp"
            android:text="@string/textLogin"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/login_button"/>
    </RelativeLayout>
</RelativeLayout>