<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="SignUpActivityBinding"/>
<LinearLayout
    android:layout_gravity="center"
    android:paddingRight="12dp"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:contentDescription="@null"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/application_logo_black"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:id="@+id/edt_sign_up_username"
            android:hint="@string/textUsername"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/textEmail"
            android:id="@+id/edt_sign_up_email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/edt_sign_up_password"
            android:hint="@string/textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/btn_sign_up"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:text="@string/textSignUp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/login_button"
        android:layout_height="wrap_content"/>

    <Button
        android:visibility="gone"
        android:layout_width="match_parent"
        android:text="@string/textLoginWithFacebook"
        android:background="@drawable/facebook_button_design"
        android:textAllCaps="false"
        android:padding="10dp"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/login_with_facebook"
        android:layout_height="45dp"
        android:drawableStart="@drawable/login_with_facebook" />
    <Button
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:text="@string/textLoginWithGoogle"
        android:background="@drawable/google_button_design"
        android:textAllCaps="false"
        android:padding="10dp"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/login_with_google"
        android:layout_height="45dp"
        android:drawableStart="@drawable/login_with_google" />
    <TextView
        android:id="@+id/txtAlreadyAMember"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/textAlreadyAMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
</layout>