<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputEditText
        android:layout_margin="10dp"
        android:id="@+id/edt_email_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/btnResetPassword"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/textResetPassword"
        android:background="@drawable/login_button"
        app:layout_constraintTop_toBottomOf="@id/edt_email_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textAlignment="center"
        android:text="@string/textGoBack"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnResetPassword"
        android:id="@+id/txtGoBackToLoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>