<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="ProfileEditDialogBinding"/>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_remove_profile_picture"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/remove_profile_picture"
            android:tint="#000"/>
        <TextView
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/text_remove_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_view_profile_picture"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/view_profile_picture"
            android:tint="#000"/>
        <TextView
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/text_view_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_upload_profile_picture"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/upload_profile_picture"
            android:tint="#000"/>
        <TextView
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/text_change_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_edit_description"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:padding="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/edit_description"
            android:tint="#000"/>
        <TextView
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/text_edit_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
</layout>