<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".view.FeedDetailsActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/AppBarLayoutTheme"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:id="@+id/application_bar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsing_toolbar_feed_detail"
            app:contentScrim="@color/black"
            app:titleEnabled="false"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:id="@+id/back_drop_feed_Detail"
                android:layout_width="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:transitionName="image"
                android:contentDescription="@null"
                android:layout_height="match_parent"
                tools:targetApi="lollipop" />
            <RelativeLayout
                android:id="@+id/feed_item_header_layout"
                app:layout_collapseMode="pin"
                android:fitsSystemWindows="true"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top_shadow" />
                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/bottom_shadow"
                    android:id="@+id/feed_detail_bottom_shadow"
                    android:scaleType="centerCrop"/>
            </RelativeLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/feed_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="false"
                    android:id="@+id/toolbar_feed_detail">
                    <TextView
                        android:id="@+id/feed_title_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:text="@string/app_name"
                        android:drawablePadding="10dp"
                        android:singleLine="true"
                        android:ellipsize="end"/>
                    <TextView
                        android:id="@+id/feed_subtitle_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:maxLines="1"
                        android:drawablePadding="10dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="12sp"
                        android:text="@string/textSubtitle"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@color/white">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/feed_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/textAlreadyAMember"
                        android:textColor="#262626"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/feed_details_timezone"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_below="@id/feed_detail_title"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/lorem_ipsum" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                        android:id="@+id/feed_detail_progress_bar"
                        android:layout_marginBottom="70dp"
                        android:layout_marginTop="50dp"/>
                    <WebView
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                        android:id="@+id/feed_detail_web_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feed_details_date"
        app:layout_anchor="@+id/application_bar"
        android:adjustViewBounds="true"
        app:layout_anchorGravity="right|end|bottom"
        android:clickable="false"
        android:background="@drawable/round_white"
        android:padding="5dp"
        android:layout_alignParentBottom="true">
        <ImageView
            android:contentDescription="@null"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_date"
            android:layout_width="18dp"
            android:layout_height="18dp"/>
        <TextView
            android:id="@+id/feed_detail_datetime"
            android:textColor="#606060"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="27dp"
            android:text="@string/textTempTimezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="27dp" />
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>